--- a/src/AdventOfCodeApp/AdventOfCodeApp.csproj
+++ b/src/AdventOfCodeApp/AdventOfCodeApp.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Inputs\" />
+      <Folder Include="Samples\" />
+      <Folder Include="Solutions\" />
+    </ItemGroup>
+
 </Project>
