--- a/src/AdventOfCodeApp/AdventOfCodeApp.csproj
+++ b/src/AdventOfCodeApp/AdventOfCodeApp.csproj
@@ -12,9 +12,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Inputs\" />
-      <Folder Include="Samples\" />
-      <Folder Include="Solutions\" />
+        <Content Include="Inputs\**\*.*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Samples\**\*.*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Solutions\**\*.*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
